# TextLab-IA-de-Edici-n-de-textos

./: Historias de Usuario  README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .env.example  .flake8  .gitignore  APA7_EXAMPLES.md  APA7_SERVICE.md  AUDIT_SERVICE.md  AUTHENTICATION.md  CHANGELOG.md  CHECKLIST.md  DATABASE_SCHEMA.md  DEPLOY.md  DOCUMENTS_API.md  Dockerfile  EXPORT_SERVICE.md  Makefile  NLP_SERVICE.md  PROJECT_STRUCTURE.md  README.md  STATS_SERVICE.md  check-docker.bat  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  export_openapi.py  fix-docker.ps1  gunicorn.conf.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  server.js  start.bat  start.ps1  start.sh  stop.bat  stop.sh
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_document_versions.py  003_add_document_analysis.py  005_add_document_stats.py  (+2 more)
backend/app/: main.py
backend/docs/: OPENAPI_EXPORT.md
backend/k8s/: backend-deployment.yaml  backend-service.yaml  hpa.yaml  ingress.yaml  namespace.yaml
backend/nginx/: nginx.conf
backend/scripts/: README.md  backup-db.sh  check_security.sh  restore-db.sh  test_endpoints.sh  verify_deployment.sh
backend/tests/: conftest.py  test_apa_service.py  test_audit.py  test_auth.py  test_authorization.py  test_document_analysis.py  test_documents.py  test_documents_crud.py  test_export.py  test_export_integration.py  test_health.py  test_nlp_service.py  test_nlp_service_mocked.py  test_stats.py
(+76 files in other folders)
